@@ -1874,10 +1874,22 @@ int do_writeout(bool exiting)
 		struct stat st;
 
 		if (stat(answer, &st) != -1) {
-		    i = do_yesno_prompt(FALSE,
-			_("File exists, OVERWRITE ? "));
-		    if (i == 0 || i == -1)
-			continue;
+		    /* If we're using restricted mode, we aren't allowed
+		     * to save a new file under the name of an existing
+		     * file.  In this case, show a "File exists"
+		     * error. */
+		    if (!ISSET(RESTRICTED)) {
+			i = do_yesno_prompt(FALSE,
+				_("File exists, OVERWRITE ? "));
+			if (i == 0 || i == -1)
+			    continue;
+		    } else {
+			errno = EEXIST;
+			statusbar(_("Error writing %s: %s"), answer,
+				strerror(errno));
+			retval = -1;
+			break;
+		    }
 		/* If we're using restricted mode, we aren't allowed to
 		 * change the name of a file once it has one, because
 		 * that would allow reading from or writing to files not
